crates/vite_task/tests/snapshots/snapshots__task graph@dependency-both-topo-and-explicit.snap
---
source: crates/vite_task_graph/tests/snapshots.rs
expression: task_graph_snapshot
input_file: crates/vite_task_graph/tests/fixtures/dependency-both-topo-and-explicit
---
[
  {
    "id": {
      "package_dir": "packages/a",
      "task_name": "build"
    },
    "command": "build a",
    "cwd": "packages/a",
    "depends_on": [
      [
        {
          "package_dir": "packages/b",
          "task_name": "build"
        },
        "Both"
      ]
    ]
  },
  {
    "id": {
      "package_dir": "packages/b",
      "task_name": "build"
    },
    "command": "build b",
    "cwd": "packages/b",
    "depends_on": []
  }
]
