crates/vite_task/tests/snapshots/snapshots__task graph@explicit-deps-workspace.snap
---
source: crates/vite_task/tests/snapshots.rs
expression: task_graph_snapshot
input_file: crates/vite_task/tests/fixtures/explicit-deps-workspace
---
[
  {
    "id": {
      "package_dir": "packages/app",
      "task_name": "build"
    },
    "command": "echo 'Building @test/app'",
    "cwd": "packages/app",
    "depends_on": [
      [
        {
          "package_dir": "packages/utils",
          "task_name": "build"
        },
        "Topological"
      ]
    ]
  },
  {
    "id": {
      "package_dir": "packages/app",
      "task_name": "deploy"
    },
    "command": "deploy-script --prod",
    "cwd": "packages/app",
    "depends_on": [
      [
        {
          "package_dir": "packages/app",
          "task_name": "build"
        },
        "Explicit"
      ],
      [
        {
          "package_dir": "packages/app",
          "task_name": "test"
        },
        "Explicit"
      ],
      [
        {
          "package_dir": "packages/utils",
          "task_name": "lint"
        },
        "Explicit"
      ]
    ]
  },
  {
    "id": {
      "package_dir": "packages/app",
      "task_name": "start"
    },
    "command": "echo 'Starting @test/app'",
    "cwd": "packages/app",
    "depends_on": []
  },
  {
    "id": {
      "package_dir": "packages/app",
      "task_name": "test"
    },
    "command": "echo 'Testing @test/app'",
    "cwd": "packages/app",
    "depends_on": [
      [
        {
          "package_dir": "packages/utils",
          "task_name": "test"
        },
        "Topological"
      ]
    ]
  },
  {
    "id": {
      "package_dir": "packages/core",
      "task_name": "build"
    },
    "command": "echo 'Building @test/core'",
    "cwd": "packages/core",
    "depends_on": []
  },
  {
    "id": {
      "package_dir": "packages/core",
      "task_name": "clean"
    },
    "command": "echo 'Cleaning @test/core'",
    "cwd": "packages/core",
    "depends_on": []
  },
  {
    "id": {
      "package_dir": "packages/core",
      "task_name": "lint"
    },
    "command": "eslint src",
    "cwd": "packages/core",
    "depends_on": [
      [
        {
          "package_dir": "packages/core",
          "task_name": "clean"
        },
        "Explicit"
      ]
    ]
  },
  {
    "id": {
      "package_dir": "packages/core",
      "task_name": "test"
    },
    "command": "echo 'Testing @test/core'",
    "cwd": "packages/core",
    "depends_on": []
  },
  {
    "id": {
      "package_dir": "packages/utils",
      "task_name": "build"
    },
    "command": "echo 'Building @test/utils'",
    "cwd": "packages/utils",
    "depends_on": [
      [
        {
          "package_dir": "packages/core",
          "task_name": "build"
        },
        "Topological"
      ]
    ]
  },
  {
    "id": {
      "package_dir": "packages/utils",
      "task_name": "lint"
    },
    "command": "eslint src",
    "cwd": "packages/utils",
    "depends_on": [
      [
        {
          "package_dir": "packages/core",
          "task_name": "build"
        },
        "Explicit"
      ],
      [
        {
          "package_dir": "packages/core",
          "task_name": "lint"
        },
        "Topological"
      ],
      [
        {
          "package_dir": "packages/utils",
          "task_name": "build"
        },
        "Explicit"
      ]
    ]
  },
  {
    "id": {
      "package_dir": "packages/utils",
      "task_name": "test"
    },
    "command": "echo 'Testing @test/utils'",
    "cwd": "packages/utils",
    "depends_on": [
      [
        {
          "package_dir": "packages/core",
          "task_name": "test"
        },
        "Topological"
      ]
    ]
  }
]
