crates/vite_task/tests/snapshots/snapshots__task graph@fingerprint-ignore-test.snap
---
source: crates/vite_task_graph/tests/snapshots.rs
expression: task_graph_snapshot
input_file: crates/vite_task_graph/tests/fixtures/fingerprint-ignore-test
---
[
  {
    "id": {
      "package_dir": "",
      "task_name": "create-files"
    },
    "command": "mkdir -p node_modules/pkg-a && echo '{\"name\":\"pkg-a\"}' > node_modules/pkg-a/package.json && echo 'content' > node_modules/pkg-a/index.js && mkdir -p dist && echo 'output' > dist/bundle.js",
    "cwd": "",
    "depends_on": []
  }
]
