crates/vite_task/tests/snapshots/snapshots__task graph@recursive-topological-workspace.snap
---
source: crates/vite_task/tests/snapshots.rs
expression: task_graph_snapshot
input_file: crates/vite_task/tests/fixtures/recursive-topological-workspace
---
[
  {
    "id": {
      "package_dir": "apps/web",
      "task_name": "build"
    },
    "command": "echo 'Building @test/web'",
    "cwd": "apps/web",
    "depends_on": [
      [
        {
          "package_dir": "packages/app",
          "task_name": "build"
        },
        "Topological"
      ],
      [
        {
          "package_dir": "packages/core",
          "task_name": "build"
        },
        "Topological"
      ]
    ]
  },
  {
    "id": {
      "package_dir": "apps/web",
      "task_name": "dev"
    },
    "command": "echo 'Running @test/web in dev mode'",
    "cwd": "apps/web",
    "depends_on": []
  },
  {
    "id": {
      "package_dir": "packages/app",
      "task_name": "build"
    },
    "command": "echo 'Building @test/app'",
    "cwd": "packages/app",
    "depends_on": [
      [
        {
          "package_dir": "packages/utils",
          "task_name": "build"
        },
        "Topological"
      ]
    ]
  },
  {
    "id": {
      "package_dir": "packages/app",
      "task_name": "test"
    },
    "command": "echo 'Testing @test/app'",
    "cwd": "packages/app",
    "depends_on": [
      [
        {
          "package_dir": "packages/utils",
          "task_name": "test"
        },
        "Topological"
      ]
    ]
  },
  {
    "id": {
      "package_dir": "packages/core",
      "task_name": "build"
    },
    "command": "echo 'Building @test/core'",
    "cwd": "packages/core",
    "depends_on": []
  },
  {
    "id": {
      "package_dir": "packages/core",
      "task_name": "test"
    },
    "command": "echo 'Testing @test/core'",
    "cwd": "packages/core",
    "depends_on": []
  },
  {
    "id": {
      "package_dir": "packages/utils",
      "task_name": "build"
    },
    "command": "echo 'Preparing @test/utils' && echo 'Building @test/utils' && echo 'Done @test/utils'",
    "cwd": "packages/utils",
    "depends_on": [
      [
        {
          "package_dir": "packages/core",
          "task_name": "build"
        },
        "Topological"
      ]
    ]
  },
  {
    "id": {
      "package_dir": "packages/utils",
      "task_name": "test"
    },
    "command": "echo 'Testing @test/utils'",
    "cwd": "packages/utils",
    "depends_on": [
      [
        {
          "package_dir": "packages/core",
          "task_name": "test"
        },
        "Topological"
      ]
    ]
  }
]
