crates/vite_task/tests/snapshots/snapshots__task graph@transitive-dependency-workspace.snap
---
source: crates/vite_task/tests/snapshots.rs
expression: task_graph_snapshot
input_file: crates/vite_task/tests/fixtures/transitive-dependency-workspace
---
[
  {
    "id": {
      "package_dir": "packages/a",
      "task_name": "build"
    },
    "command": "echo Building A",
    "cwd": "packages/a",
    "depends_on": [
      [
        {
          "package_dir": "packages/a",
          "task_name": "test"
        },
        "Explicit"
      ],
      [
        {
          "package_dir": "packages/b2",
          "task_name": "build"
        },
        "Topological"
      ],
      [
        {
          "package_dir": "packages/c",
          "task_name": "build"
        },
        "Topological"
      ]
    ]
  },
  {
    "id": {
      "package_dir": "packages/a",
      "task_name": "test"
    },
    "command": "echo test a",
    "cwd": "packages/a",
    "depends_on": []
  },
  {
    "id": {
      "package_dir": "packages/another-a",
      "task_name": "build"
    },
    "command": "echo Building another A",
    "cwd": "packages/another-a",
    "depends_on": []
  },
  {
    "id": {
      "package_dir": "packages/b1",
      "task_name": "lint"
    },
    "command": "echo lint b1",
    "cwd": "packages/b1",
    "depends_on": [
      [
        {
          "package_dir": "packages/c",
          "task_name": "lint"
        },
        "Topological"
      ]
    ]
  },
  {
    "id": {
      "package_dir": "packages/b2",
      "task_name": "build"
    },
    "command": "echo build b2",
    "cwd": "packages/b2",
    "depends_on": [
      [
        {
          "package_dir": "packages/c",
          "task_name": "build"
        },
        "Topological"
      ]
    ]
  },
  {
    "id": {
      "package_dir": "packages/c",
      "task_name": "build"
    },
    "command": "echo Building C",
    "cwd": "packages/c",
    "depends_on": []
  },
  {
    "id": {
      "package_dir": "packages/c",
      "task_name": "lint"
    },
    "command": "echo lint c",
    "cwd": "packages/c",
    "depends_on": []
  }
]
